fix: исправлены ошибки компиляции - getViews public, findByCategoryId