@@ -1,7 +1,6 @@
 package ru.practicum.main.service.impl;
 
 import lombok.RequiredArgsConstructor;
-import lombok.extern.slf4j.Slf4j;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
@@ -9,21 +8,19 @@ import org.springframework.transaction.annotation.Transactional;
 import ru.practicum.main.dto.CompilationDto;
 import ru.practicum.main.dto.NewCompilationDto;
 import ru.practicum.main.dto.UpdateCompilationRequest;
-import ru.practicum.main.exception.ConflictException;
 import ru.practicum.main.exception.NotFoundException;
 import ru.practicum.main.mapper.CompilationMapper;
 import ru.practicum.main.model.Compilation;
 import ru.practicum.main.model.Event;
 import ru.practicum.main.repository.CompilationRepository;
 import ru.practicum.main.repository.EventRepository;
+import ru.practicum.main.repository.ParticipationRequestRepository;
 import ru.practicum.main.service.CompilationService;
 
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
 
-@Slf4j
 @Service
 @RequiredArgsConstructor
 @Transactional(readOnly = true)
@@ -31,83 +28,103 @@ public class CompilationServiceImpl implements CompilationService {
 
     private final CompilationRepository compilationRepository;
     private final EventRepository eventRepository;
+    private final ParticipationRequestRepository requestRepository;
+    private final EventServiceImpl eventService;
 
     @Override
     @Transactional
     public CompilationDto createCompilation(NewCompilationDto request) {
-        log.info("Создание подборки: {}", request.getTitle());
-
-        Set<Event> events = new HashSet<>();
-        if (request.getEvents() != null && !request.getEvents().isEmpty()) {
-            events = new HashSet<>(eventRepository.findAllById(request.getEvents()));
-        }
+        Set<Event> events = resolveEvents(request.getEvents());
 
         Compilation compilation = CompilationMapper.toEntity(request, events);
-        Compilation savedCompilation = compilationRepository.save(compilation);
-        return CompilationMapper.toDto(savedCompilation);
+
+        return CompilationMapper.toDto(
+                compilationRepository.save(compilation),
+                requestRepository,
+                eventService
+        );
     }
 
     @Override
     @Transactional
-    public CompilationDto updateCompilation(Long compId, UpdateCompilationRequest request) {
-        log.info("Обновление подборки с id: {}", compId);
-
+    public CompilationDto updateCompilation(
+            Long compId,
+            UpdateCompilationRequest request
+    ) {
         Compilation compilation = compilationRepository.findById(compId)
-                .orElseThrow(() -> new NotFoundException("Подборка с id " + compId + " не найдена"));
-
-        // Валидация длины названия — если title передан и его длина > 50
-        if (request.getTitle() != null && request.getTitle().length() > 50) {
-            throw new IllegalArgumentException("Заголовок подборки не может превышать 50 символов");
-        }
+                .orElseThrow(() ->
+                        new NotFoundException("Подборка с id " + compId + " не найдена"));
 
         if (request.getTitle() != null) {
             compilation.setTitle(request.getTitle());
         }
+
         if (request.getPinned() != null) {
             compilation.setPinned(request.getPinned());
         }
+
         if (request.getEvents() != null) {
-            Set<Event> events = new HashSet<>(eventRepository.findAllById(request.getEvents()));
-            compilation.setEvents(events);
+            compilation.setEvents(resolveEvents(request.getEvents()));
         }
 
-        Compilation updatedCompilation = compilationRepository.save(compilation);
-        return CompilationMapper.toDto(updatedCompilation);
+        return CompilationMapper.toDto(
+                compilationRepository.save(compilation),
+                requestRepository,
+                eventService
+        );
     }
 
     @Override
     @Transactional
     public void deleteCompilation(Long compId) {
-        log.info("Удаление подборки с id: {}", compId);
+        Compilation compilation = compilationRepository.findById(compId)
+                .orElseThrow(() ->
+                        new NotFoundException("Подборка с id " + compId + " не найдена"));
 
-        if (!compilationRepository.existsById(compId)) {
-            throw new NotFoundException("Подборка с id " + compId + " не найдена");
-        }
-        compilationRepository.deleteById(compId);
+        compilationRepository.delete(compilation);
     }
 
     @Override
-    public List<CompilationDto> getCompilations(Boolean pinned, int from, int size) {
-        log.info("Получение списка подборок: pinned={}, from={}, size={}", pinned, from, size);
-
+    public List<CompilationDto> getCompilations(
+            Boolean pinned,
+            int from,
+            int size
+    ) {
         Pageable pageable = PageRequest.of(from / size, size);
-        if (pinned != null) {
-            return compilationRepository.findByPinned(pinned, pageable).stream()
-                    .map(CompilationMapper::toDto)
-                    .collect(Collectors.toList());
-        } else {
-            return compilationRepository.findAll(pageable).stream()
-                    .map(CompilationMapper::toDto)
-                    .collect(Collectors.toList());
+
+        if (pinned == null) {
+            return compilationRepository.findAll(pageable)
+                    .stream()
+                    .map(comp -> CompilationMapper.toDto(comp, requestRepository, eventService))
+                    .toList();
         }
+
+        return compilationRepository.findByPinned(pinned, pageable)
+                .stream()
+                .map(comp -> CompilationMapper.toDto(comp, requestRepository, eventService))
+                .toList();
     }
 
     @Override
     public CompilationDto getCompilationById(Long compId) {
-        log.info("Получение подборки по id: {}", compId);
-
         Compilation compilation = compilationRepository.findById(compId)
-                .orElseThrow(() -> new NotFoundException("Подборка с id " + compId + " не найдена"));
-        return CompilationMapper.toDto(compilation);
+                .orElseThrow(() ->
+                        new NotFoundException("Подборка с id " + compId + " не найдена"));
+
+        return CompilationMapper.toDto(compilation, requestRepository, eventService);
+    }
+
+    private Set<Event> resolveEvents(Set<Long> eventIds) {
+        if (eventIds == null || eventIds.isEmpty()) {
+            return new HashSet<>();
+        }
+
+        List<Event> events = eventRepository.findAllById(eventIds);
+
+        if (events.size() != eventIds.size()) {
+            throw new NotFoundException("Некоторые события подборки не найдены");
+        }
+
+        return new HashSet<>(events);
     }
 }
